--- a/ui/src/app/components/game/chat/chat-messages/chat-messages.component.scss
+++ b/ui/src/app/components/game/chat/chat-messages/chat-messages.component.scss
@@ -51,7 +51,7 @@
 }
 
 .message-time {
-  font-size: var(--font-size-xs);
+  font-size: var(--font-size-s);
   color: var(--color-text-secondary);
   flex-shrink: 0;
 }
