--- a/ui/src/app/components/game/inventory/inventory-list-view/inventory-list-view.component.scss
+++ b/ui/src/app/components/game/inventory/inventory-list-view/inventory-list-view.component.scss
@@ -98,7 +98,7 @@
 }
 
 .item-tier {
-  font-size: var(--font-size-xs);
+  font-size: var(--font-size-s);
   color: var(--color-text-label);
   font-weight: var(--font-weight-bold);
 }
@@ -129,7 +129,7 @@
 }
 
 .item-quantity {
-  font-size: var(--font-size-xs);
+  font-size: var(--font-size-s);
   color: var(--color-text-label);
   flex-shrink: 0;
 }
