--- a/ui/src/app/components/game/attributes/attributes.component.scss
+++ b/ui/src/app/components/game/attributes/attributes.component.scss
@@ -85,7 +85,7 @@
       }
 
       .attribute-level {
-        font-size: var(--font-size-xs);
+        font-size: var(--font-size-s);
         color: var(--color-accent-blue);
         font-weight: var(--font-weight-semibold);
       }
