--- a/ui/src/app/components/game/game.component.scss
+++ b/ui/src/app/components/game/game.component.scss
@@ -487,7 +487,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: var(--color-text-primary);
-    font-size: var(--font-size-xs);
+    font-size: var(--font-size-s);
     font-weight: var(--font-weight-bold);
     text-shadow: var(--spacing-2xs) var(--spacing-2xs) var(--spacing-2xs) rgba(0, 0, 0, 0.9);
     letter-spacing: var(--letter-spacing-wide);
