--- a/ui/src/app/components/game/quest-journal/quest-journal.component.scss
+++ b/ui/src/app/components/game/quest-journal/quest-journal.component.scss
@@ -114,7 +114,7 @@
     color: var(--color-accent-blue);
     padding: var(--spacing-2xs) var(--spacing-s);
     border-radius: var(--radius-m);
-    font-size: var(--font-size-xs);
+    font-size: var(--font-size-s);
     font-weight: var(--font-weight-bold);
     text-transform: uppercase;
     letter-spacing: var(--border-width-thin);
