--- a/ui/src/app/components/shared/confirm-dialog/confirm-dialog.component.scss
+++ b/ui/src/app/components/shared/confirm-dialog/confirm-dialog.component.scss
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 9999;
+  z-index: var(--z-modal);
   animation: fadeIn var(--transition-fast) ease-out;
 }
 
