--- a/ui/src/app/components/shared/item-details-panel/item-basic-info/item-basic-info.component.scss
+++ b/ui/src/app/components/shared/item-details-panel/item-basic-info/item-basic-info.component.scss
@@ -80,7 +80,7 @@
 }
 
 .info-label {
-  font-size: var(--font-size-xs);
+  font-size: var(--font-size-s);
   color: var(--color-text-label);
   text-transform: uppercase;
   letter-spacing: var(--letter-spacing-wide);
