--- a/ui/src/app/components/shared/item-mini/item-mini.component.scss
+++ b/ui/src/app/components/shared/item-mini/item-mini.component.scss
@@ -5,7 +5,7 @@
   padding: var(--spacing-xs) var(--spacing-s);
   background: var(--color-bg-overlay);
   border-radius: var(--radius-s);
-  font-size: var(--font-size-xs);
+  font-size: var(--font-size-s);
   color: var(--color-text-secondary);
   height: var(--spacing-3xl);
   min-width: var(--spacing-4xl);
